src/components/moods/moods.scss
@import "../../styles/presets";
@import "../../styles/hovers";

#parent {
  position: absolute;
  background-repeat: no-repeat;
  background-size: cover;
  height: 100vh;
  width: 100vw;
  top: 0;

  .mute-button {
    position: absolute;
    bottom: 0;
    right: 0;
    margin-right: 16px;
  }

  #moods {
    overflow: auto;
    position: absolute;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100vh;
    width: 100vw;
    top: 0;
    left: 0;

    scrollbar-color: rgba($blackLight, 0.6) transparent;

    @include desktop {
      max-width: 400px;
    }

    .mood {
      width: 80%;
      min-width: 250px;
      max-width: 350px;

      @extend .bg-white;
      @extend .box-shadow;
      @extend .circular-border;
      @extend .default-padding;
      @extend .default-margin;
      @extend .clickable;
    }
  }

  .react-player {
    display: none;
  }
}

